--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@300;500&display=swap');
+
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: 'Karla', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.linear {
+    background-image: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
+}
+
+
+.meme-container input {
+    width: 230px;
+    height: 35px;
+    border-radius: 5px;
+    border: 1px solid black;
 }
