--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -21,5 +20,11 @@ body {
     width: 230px;
     height: 35px;
     border-radius: 5px;
-    border: 1px solid black;
+    border: 1px solid rgb(70, 70, 70);
+    padding-left: 10px;
+}
+
+
+.meme-container input:active {
+    outline: none;
 }
